--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="sonora">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Julius Sonora Hack A Thon</title>
+
+    <style type="text/css">
+        [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+            display: none !important;
+        }
+    </style>
 </head>
 <body>
 
