--- a/index.html
+++ b/index.html
@@ -4,15 +4,84 @@
     <meta charset="UTF-8">
     <title>Julius Sonora Hack A Thon</title>
 
+    <!-- Vendor CSS -->
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="app/jstyles.css">
+
+
     <style type="text/css">
         [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
             display: none !important;
         }
     </style>
 </head>
-<body>
 
-<h1>Ello World ^_^/</h1>
+
+<body ng-cloak>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/"><b><i class="fa fa-code"></i> SonoraHack</b></a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#!/create"><i class="fa fa-plus-circle"></i> Create</a></li>
+                <li><a href="#!/login">Login</a></li>
+            </ul>
+
+            <!-- Left side of nav -->
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Left Side</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<br><br>
+
+<h1> 4*4= {{4*4}} </h1>
+
+<ng-view></ng-view>
+
+
+<!--------------------------------------->
+<!-- JavaScript Frameworks & Libraries -->
+<!--------------------------------------->
+<script type="text/javascript" src="vendor/jq2/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+
+
+
+<!----------------------->
+<!-- Custom JavaScript -->
+<!----------------------->
+<script type="text/javascript" src="app/app.js"></script>
 
 </body>
 </html>
