decent mock1 ui from our designers 1st low fi design

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" ng-click="showHero()"><b>sonora hack</b></a>
+            <a class="navbar-brand" ng-href="#!/home" ng-click="showHero()"><b>Lab916</b></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li ng-click="hideHero()"><a href="#!/create">
+                <li ng-click="hideHero()"><a ng-href="#!/create">
                     <i class="fa fa-plus-circle"></i> Create</a></li>
             </ul>
 
