got footer and nav added, ui is still a bit buggy

--- a/app/create/temp.create.html
+++ b/app/create/temp.create.html
@@ -14,7 +14,7 @@
                         <img src="https://ninjaposts.firebaseapp.com/css/img/ideaguy2d.png" alt="#"
                         width="230px" height="230px"/>
 
-                        <span class='caption'>What were you thinking?</span>
+                        <span class='caption'>CSS Anim</span>
 
                     </div><!-- .front -->
 
@@ -29,7 +29,7 @@
                             <small>
                                 photo courtesy of <a
                                     href=""
-                                    target="_blank">MemPic</a>
+                                    target="_blank">Lab916</a>
                             </small>
 
                         </p><!-- .pic_source -->
@@ -66,7 +66,7 @@
                             <small>
                                 photo courtesy of <a
                                     href=""
-                                    target="_blank">MemPic</a>
+                                    target="_blank">Lab916</a>
                             </small>
 
                         </p><!-- .pic_source -->
