--- a/app/landing/view.landing.html
+++ b/app/landing/view.landing.html
@@ -127,7 +127,8 @@
             <br>
             <img src="http://via.placeholder.com/550x300" alt="pic">
 
-            <div class="lab-mid-yellow-bg lab-h-med ">
+            <!-- lab-row-flex ROW -->
+            <div class="lab-mid-yellow-bg lab-h-med lab-row-flex">
                 <div class="lab-col">
                     <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/214280-200.png" alt="avatar" width="50px">
                 </div>
