COMPLETE_REVAMP_OF_MOCK1_landing, starting since a few commits ago (like less < 3 or 4 ish) we've decided to basically scrap entire mock1 ui

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body id="page-top" ng-cloak ng-controller="CoreCtrl">
 
-<nav class="navbar navbar-default">
+<nav id="lab-nav" class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <!-- Left side of nav -->
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="col-md-6 footer-contact-details">
                 <h4><i class="fa fa-mail-reply"></i> Subscribe to Lab916</h4>
-                <a href="#">Nothing is impossible, the word itself says “Im possible”! —Audrey Hepburn</a>
+                <a href="#">Nothing is impossible, the word itself says “I'm possible”! —Audrey Hepburn</a>
             </div>
             <div class="col-md-2 footer-contact-details">
                 <a href="#">916-123-4567</a><a href="#">info@lab916.com</a><a href="#">FIND A SERVICE</a>
