decent v1 of mock2 landing

--- a/ui/index.html
+++ b/ui/index.html
@@ -48,7 +48,7 @@
 
                 <div class="main-wrapper">
 
-                    <h1><img class='snowflake' src="img/snowflake.png" alt="#"> Whistler White Ski Resort </h1>
+                    <h1><img class='snowflake' src="img/snowflake.png" alt="#"> Julius3d User Interface </h1>
 
                     <hr>
                     <br>
@@ -83,7 +83,7 @@
 
                 <div class="video-box reset">
 
-                    <h2 class='h2'>Whistler Ski Resort</h2>
+                    <h2 class='h2'>Julius3D UI</h2>
 
                     <div id="video">
 
