got a super basic 'search results' to show on keyUp but when user deletes search query the results DON'T become hidden again

--- a/app/state.search/view.search-test1.html
+++ b/app/state.search/view.search-test1.html
@@ -1,12 +1,15 @@
 <div class="card checkinslist container">
     <div class="search cf">
         <h2>Search test</h2>
-        <p>{{message}}</p>
-        <!-- Search - check in -->
+        <p>{{message}} | keypresses: {{keypresses}}</p>
+
+        <!-- QUERY -->
         <div class="form-group">
-            <input type="text" ng-model="query" class="form-control" placeholder="Search">
+            <input type="text" ng-model="query" class="form-control" placeholder="Search"
+                ng-keyup="keypresses = keypresses + 1" ng-init="keypresses=0">
         </div>
-        <!-- filter - form group -->
+
+        <!-- DROP DOWN FILTER -->
         <div class="formgroup">
             <span class="label">by:</span>
             <select ng-model="order">
@@ -15,7 +18,8 @@
                 <option value="date">Date</option>
             </select>
         </div>
-        <!-- order-by and query form group -->
+
+        <!-- ORDER BY -->
         <div class="formgroup">
             <input id="dirascending" type="radio" name="direction" ng-model="direction">
             <label for="dirascending">asc</label>&nbsp;
@@ -27,7 +31,7 @@
 
     <br>
     <!-- Data Output area: -->
-    <ul class="userlist cf">
+    <ul class="userlist cf" ng-show="keypresses>1">
         <!---------------------------->
         <!------ outer FOR-LOOP ------>
         <!---------------------------->
