NEW VERSION - this is the UI prior to the 'Official' version1 homepage

--- a/app/landing/view.landing-v2.html
+++ b/app/landing/view.landing-v2.html
@@ -4,7 +4,7 @@
     <br><br><br><br>
     <div class="container-fluid">
         <div class="col-md-5">
-            <img src="img/work.jpg" class="img-centered" alt="expo">
+            <img src="img/hero-image-yellow.png" class="img-centered" alt="expo">
         </div>
         <div class="col-md-7">
             <h2>We help Amazon sellers, get more sales.</h2>
