the ui after working on it all day

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" ng-href="#!/home" ng-click="ccShowHero()">
-                <img src="img/logo-main.png" alt="logo"  class="img-responsive">
+                <img src="img/logo-main.png" alt="logo">
             </a>
         </div>
 
@@ -112,7 +112,7 @@
 <ng-view></ng-view>
 
 <!-- Footer -->
-<footer class="footer" style="background-image: url('img/sacramento.jpg')">
+<footer id="L9-footer" class="footer">
     <div class="container">
         <div class="row">
             <div class="col-md-6 footer-contact-details">
